--- a/fleet/_init/gitrepo-fleet-local-rancher-monitoring.yaml
+++ b/fleet/_init/gitrepo-fleet-local-rancher-monitoring.yaml
@@ -5,7 +5,7 @@ metadata:
   name: rancher-monitoring
   namespace: fleet-local
 spec:
-  branch: dev
+  branch: main
   paths:
     - fleet/rancher-monitoring
   repo: https://github.com/johnko/rancher-demo.git
